--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
   "dependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/express-validator": "^3.0.0",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/pg": "^8.11.6",
     "bcrypt": "^5.1.1",
     "express-validator": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.2",
     "pg": "^8.11.5",
     "ts-node": "^10.9.2",
